# trader

./: .gitignore  1  README.md  progress-239a4e5b-65f5-4688-9fa6-53acba5a98ff.txt  progress-37ffe910-37ea-4c33-a1d4-44b4f3f4fd6b.txt  progress-3c8591e9-6312-49f7-90bb-0c231190a494.txt  progress-56e7c9bc-f616-417e-b726-aa2abcae8b52.txt  progress-73b62ec8-5fb5-426a-a7f7-de244f78b795.txt  progress-7968fa1d-593a-4cff-8bbb-5ac5e358c637.txt  progress-f1b0c55d-40cf-4eb2-95f4-c127ed87275a.txt  pyproject.toml  requirements.txt
.openclaw/: workspace-state.json
systemd/: d2iabot-scraper.service  d2iabot-scraper.timer  install-scraper.sh
tests/: __init__.py  test_alert.py  test_alert_integration.py  test_circuit_breaker.py  test_cli.py  test_cli_health_check.py  test_config.py  test_connection_pool.py  test_database.py  test_database_manager.py  test_error_handling.py  test_exceptions.py  test_health_check.py  test_health_check_integration.py  test_insert_items_batch.py  test_install_script.py  test_integration.py  test_item_parser.py  test_item_parser_logging.py  test_logging.py  test_logging_utils.py  test_parser.py  test_price_extractor.py  test_retry.py  test_schema.py  test_scraper.py  test_scraper_alerts.py  test_scraper_integration.py  test_scraper_resume.py  test_scraper_signal.py  test_scraper_state.py  test_state.py  test_structure.py  test_systemd_files.py  test_trader.py  test_transaction.py  test_validators.py
trader/: __init__.py  __main__.py  alert.py  circuit_breaker.py  cli.py  config.py  database.py  error_handling.py  exceptions.py  health_check.py  parser.py  (+9 more)
(+8 files in other folders)
